# memex

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  STATUS.md  dist-workspace.toml  issues.org
.github/workflows/: ci.yml
src/: app.rs  backlinks.rs  command.rs  command_bar.rs  config.rs  diagram.rs  document.rs  editor.rs  fs.rs  main.rs  markdown.rs  minibuffer.rs  mode.rs  pane.rs  plugin.rs  state.rs  statusbar.rs  syntax.rs  theme.rs  vault.rs  workspace.rs
src/app/: command_registry.rs  minibuffer_controller.rs  minibuffer_view.rs  mode_line.rs  resource.rs  title_bar.rs  ui_helpers.rs  workspace_controller.rs
src/diagram/: mod.rs  model.rs  view.rs
src/diagram/import/: drawio.rs  excalidraw.rs  mod.rs
src/editor/: blink.rs  buffer.rs  code_edit.rs  commands.rs  display_map.rs  element.rs  input.rs  keymap.rs  mod.rs  movement.rs  outline.rs  table.rs  undo.rs  view.rs
src/editor/vim/: mod.rs  normal.rs  operators.rs  visual.rs
src/graph/: mod.rs  view.rs
src/keymap/: action.rs  binding.rs  context.rs  defaults.rs  grammar.rs  layer.rs  mod.rs
src/pdf/: mod.rs  scrollbar.rs  view.rs
src/ui/: mod.rs  scrollbar.rs
src/vault/: frontmatter.rs  id.rs  index.rs  layout.rs  mod.rs  scanner.rs  watcher.rs
