[package]
name = "memex"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
image = "0.25"
pdfium-render = "0.8"
rhai = "1.24.0"
pulldown-cmark = { version = "0.12", default-features = false, features = ["simd"] }
ropey = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
