[package]
name = "memex"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/moamenhredeen/memex"
description = "A note-taking editor inspired by Obsidian, Logseq, and Emacs org-roam"
license = "MIT"

[dependencies]
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
mupdf = { version = "0.6", default-features = false }
rhai = "1.24.0"
pulldown-cmark = { version = "0.12", default-features = false, features = ["simd"] }
ropey = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
