[package]
name = "memex"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/moamenhredeen/memex"
description = "A note-taking editor inspired by Obsidian, Logseq, and Emacs org-roam"
license = "AGPL-3.0"

[dependencies]
dirs = "6.0.0"
fastrand = "2.3"
fuzzy-matcher = "0.3.7"
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
mupdf = { git = "https://github.com/messense/mupdf-rs", rev = "7f0cb930884145f7b3f62451d178ab1fa432e565", default-features = false }
notify = "7"
notify-debouncer-full = "0.4"
pulldown-cmark = { version = "0.12", default-features = false, features = ["simd"] }
ropey = "1"
roxmltree = "0.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "0.8.23"
toml_edit = "0.22.27"
tree-sitter = "=0.25.10"
tree-sitter-highlight = "=0.25.10"
tree-sitter-rust = "0.24.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-bash = "0.25.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-c = "0.24.2"
tree-sitter-powershell = "0.26.4"
tree-sitter-fish = "3.6.0"
tree-sitter-zig = "1.1.2"
tree-sitter-make = "1.1.1"
tree-sitter-xml = "0.7.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-dart = "0.2.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
